# redline-client

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  USERSCRIPTS_API.md  electron-builder.yml  index.js  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
assets/: background.tiff  changelog.json  settings.json  userscriptsSettings.json
assets/css/: clientStyles.css  modalStyles.css
assets/html/: menu.html
src-rust/: Cargo.toml  triplet.js  triplet.ts
src-rust/analytics/: Cargo.toml  index.cjs  index.d.ts  index.js  index.ts  package.json
src-rust/analytics/src/: format_date.rs  lib.rs
src-rust/drpc/: Cargo.toml  index.cjs  index.d.ts  index.js  index.ts  package.json
src-rust/drpc/src/: lib.rs
src-rust/url_parser/: Cargo.toml
src-rust/url_parser/src/: lib.rs
src/modals/: modal.js  modal.ts  style.css
src/modals/menu/: analytics.js  analytics.ts  changelog.js  changelog.ts  customization.js  customization.ts  generateConfigs.ts  index.html  script.js  script.ts  settings.js  settings.ts  userscripts.js  userscripts.ts
src/preload/: badges.ts  clientStyles.css  friends.ts  preload.js  preload.ts  preloadFunctions.ts  preloadUtils.js  preloadUtils.ts
src/utils/: config.js  config.ts  dialogs.js  dialogs.ts  drpc.js  functions.js  functions.ts  keybinding.js  keybinding.ts  swapper.js  swapper.ts  userscripts.js  userscripts.ts
