[workspace]
members = [
  # NAPI modules
  "analytics",
  "drpc",
  # Utilities
  "url_parser",
]
resolver = "2"

[workspace.package]
authors = ["robertpakalns"]
edition = "2024"
license-file = "../LICENSE"
repository = "https://github.com/robertpakalns/redline-client"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
debug = false
debug-assertions = false

[workspace.dependencies]
dirs = { version = "6.0.0", default-features = false }
napi = { version = "3.3.0", default-features = false }
napi-derive = { version = "3.2.5", default-features = false, features = ["type-def"] }
napi-build = { version = "2.2.3", default-features = false }
rusqlite = { version = "0.37.0", default-features = false, features = ["bundled"] }

url_parser = { path = "url_parser" }
