[package]
name = "analytics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "6.0.0"
napi = "2.16.17"
napi-derive = "2.16.13"
rusqlite = { version = "0.37.0", features = ["bundled"] }
time = "0.3.41"
url_parser = { path = "../url_parser" }

[build-dependencies]
napi-build = "2.2.2"
