[package]
name = "analytics"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
time = "0.3.44"

napi = { workspace = true }
napi-derive = { workspace = true }
url_parser = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
