[package]
name = "analytics"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Analytics utility, storing data in an SQLite database"
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs.workspace = true
napi.workspace = true
napi-derive.workspace = true
rusqlite.workspace = true

url_parser.workspace = true

[build-dependencies]
napi-build.workspace = true
